<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    tools:context=".PopupActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/is_emergency"
            android:textSize="20sp"
            android:gravity="center"
            android:background="#E91E63"
            />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/date"
                android:text="."
                android:textSize="30sp"
                android:gravity="center"
                android:background="#fff"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/reason"
                android:text="."
                android:textSize="30sp"
                android:gravity="center"
                android:background="#fff"
                />
        </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/safe"
            android:textSize="20sp"
            android:gravity="center"
            android:background="#2196F3"
            android:id="@+id/safe"
            />
        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/emergency"
            android:textSize="20sp"
            android:gravity="center"
            android:background="#F32121"
            android:id="@+id/danger"
            />

    </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>